Package_Tools/include-C/flint/in_arbeit/h/acb_poly.h

/*
    Copyright (C) 2012 Fredrik Johansson

    This file is part of Arb.

    Arb is free software: you can redistribute it and/or modify it under
    the terms of the GNU Lesser General Public License (LGPL) as published
    by the Free Software Foundation; either version 2.1 of the License, or
    (at your option) any later version.  See <http://www.gnu.org/licenses/>.
*/


/* Memory management */

void acb_poly_init(acb_poly_t poly);
void acb_poly_init2(acb_poly_t poly, slong len);
void acb_poly_clear(acb_poly_t poly);
void acb_poly_fit_length(acb_poly_t poly, slong len);
void _acb_poly_set_length(acb_poly_t poly, slong len);
void _acb_poly_normalise(acb_poly_t poly);
extern void
acb_poly_swap(acb_poly_t poly1, acb_poly_t poly2)
;
extern slong acb_poly_length(const acb_poly_t poly)
;
extern slong acb_poly_degree(const acb_poly_t poly)
;
slong acb_poly_valuation(const acb_poly_t poly);
extern int
acb_poly_is_zero(const acb_poly_t z)
;
extern int
acb_poly_is_one(const acb_poly_t z)
;
extern int
acb_poly_is_x(const acb_poly_t z)
;
extern void acb_poly_zero(acb_poly_t poly)
;
extern void
acb_poly_one(acb_poly_t poly)
;
void acb_poly_set_coeff_si(acb_poly_t poly, slong n, slong x);
void acb_poly_set_coeff_acb(acb_poly_t poly, slong n, const acb_t x);
void acb_poly_get_coeff_acb(acb_t x, const acb_poly_t poly, slong n);
#define acb_poly_get_coeff_ptr(poly, n) \
    ((n) < (poly)->length ? (poly)->coeffs + (n) : NULL)
void _acb_poly_shift_right(acb_ptr res, acb_srcptr poly, slong len, slong n);
void acb_poly_shift_right(acb_poly_t res, const acb_poly_t poly, slong n);
void _acb_poly_shift_left(acb_ptr res, acb_srcptr poly, slong len, slong n);
void acb_poly_shift_left(acb_poly_t res, const acb_poly_t poly, slong n);
extern void
acb_poly_truncate(acb_poly_t poly, slong newlen)
;
void _acb_poly_majorant(arb_ptr res, acb_srcptr vec, slong len, slong prec);
void acb_poly_majorant(arb_poly_t res, const acb_poly_t poly, slong prec);
void acb_poly_fprintd(FILE * file, const acb_poly_t poly, slong digits);