packagesxx/flint/in_arbeit/pas/acb_poly.inc

{$IFDEF read_interface}


{
    Copyright (C) 2012 Fredrik Johansson

    This file is part of Arb.

    Arb is free software: you can redistribute it and/or modify it under
    the terms of the GNU Lesser General Public License (LGPL) as published
    by the Free Software Foundation; either version 2.1 of the License, or
    (at your option) any later version.  See <http://www.gnu.org/licenses/>.
 }
{ Memory management  }

procedure acb_poly_init(poly:Tacb_poly_t);cdecl;external libflint;
procedure acb_poly_init2(poly:Tacb_poly_t; len:Tslong);cdecl;external libflint;
procedure acb_poly_clear(poly:Tacb_poly_t);cdecl;external libflint;
procedure acb_poly_fit_length(poly:Tacb_poly_t; len:Tslong);cdecl;external libflint;
procedure _acb_poly_set_length(poly:Tacb_poly_t; len:Tslong);cdecl;external libflint;
procedure _acb_poly_normalise(poly:Tacb_poly_t);cdecl;external libflint;
procedure acb_poly_swap(poly1:Tacb_poly_t; poly2:Tacb_poly_t);cdecl;external libflint;
function acb_poly_length(poly:Tacb_poly_t):Tslong;cdecl;external libflint;
function acb_poly_degree(poly:Tacb_poly_t):Tslong;cdecl;external libflint;
function acb_poly_valuation(poly:Tacb_poly_t):Tslong;cdecl;external libflint;
function acb_poly_is_zero(z:Tacb_poly_t):longint;cdecl;external libflint;
function acb_poly_is_one(z:Tacb_poly_t):longint;cdecl;external libflint;
function acb_poly_is_x(z:Tacb_poly_t):longint;cdecl;external libflint;
procedure acb_poly_zero(poly:Tacb_poly_t);cdecl;external libflint;
procedure acb_poly_one(poly:Tacb_poly_t);cdecl;external libflint;
procedure acb_poly_set_coeff_si(poly:Tacb_poly_t; n:Tslong; x:Tslong);cdecl;external libflint;
procedure acb_poly_set_coeff_acb(poly:Tacb_poly_t; n:Tslong; x:Tacb_t);cdecl;external libflint;
procedure acb_poly_get_coeff_acb(x:Tacb_t; poly:Tacb_poly_t; n:Tslong);cdecl;external libflint;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function acb_poly_get_coeff_ptr(poly,n : longint) : longint;

procedure _acb_poly_shift_right(res:Tacb_ptr; poly:Tacb_srcptr; len:Tslong; n:Tslong);cdecl;external libflint;
procedure acb_poly_shift_right(res:Tacb_poly_t; poly:Tacb_poly_t; n:Tslong);cdecl;external libflint;
procedure _acb_poly_shift_left(res:Tacb_ptr; poly:Tacb_srcptr; len:Tslong; n:Tslong);cdecl;external libflint;
procedure acb_poly_shift_left(res:Tacb_poly_t; poly:Tacb_poly_t; n:Tslong);cdecl;external libflint;
procedure acb_poly_truncate(poly:Tacb_poly_t; newlen:Tslong);cdecl;external libflint;
procedure _acb_poly_majorant(res:Tarb_ptr; vec:Tacb_srcptr; len:Tslong; prec:Tslong);cdecl;external libflint;
procedure acb_poly_majorant(res:Tarb_poly_t; poly:Tacb_poly_t; prec:Tslong);cdecl;external libflint;
{$ifdef FLINT_HAVE_FILE}
procedure acb_poly_fprintd(file:PFILE; poly:Tacb_poly_t; digits:Tslong);cdecl;external libflint;
{$endif}
